web-infras/parser/tests/fixtures/babel/es2015/destructuring/binding-eval/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,17)
1|'use strict'; ({eval = defValue} = obj)
 |               ^
